--- a/.github/workflows/cloud-run.yml
+++ b/.github/workflows/cloud-run.yml
@@ -10,6 +10,8 @@ env:
   PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
   SERVICE_NAME: line-inventory-bot
   REGION: asia-northeast1  # Tokyo region, change as needed
+  REPOSITORY: line-bot-images  # Artifact Registry repository name
+  LOCATION: asia-northeast1    # Artifact Registry location
 
 jobs:
   deploy:
@@ -30,18 +32,25 @@ jobs:
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
 
-      - name: Authorize Docker push
-        run: gcloud auth configure-docker
+      - name: Create Artifact Registry repository if it doesn't exist
+        run: |
+          if ! gcloud artifacts repositories describe $REPOSITORY --location=$LOCATION; then
+            gcloud artifacts repositories create $REPOSITORY --repository-format=docker --location=$LOCATION
+          fi
+
+      - name: Authorize Docker push to Artifact Registry
+        run: |
+          gcloud auth configure-docker $LOCATION-docker.pkg.dev
 
       - name: Build and push container
         run: |
-          docker build -t gcr.io/$PROJECT_ID/$SERVICE_NAME:${{ github.sha }} .
-          docker push gcr.io/$PROJECT_ID/$SERVICE_NAME:${{ github.sha }}
+          docker build -t $LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$SERVICE_NAME:${{ github.sha }} .
+          docker push $LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$SERVICE_NAME:${{ github.sha }}
 
       - name: Deploy to Cloud Run
         run: |
           gcloud run deploy $SERVICE_NAME \
-            --image gcr.io/$PROJECT_ID/$SERVICE_NAME:${{ github.sha }} \
+            --image $LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$SERVICE_NAME:${{ github.sha }} \
             --platform managed \
             --region $REGION \
             --allow-unauthenticated \
