--- a/.github/workflows/inventory-update-schedule.yml
+++ b/.github/workflows/inventory-update-schedule.yml
@@ -7,6 +7,19 @@ on:
     - cron: '30 1 * * 1'
   # Allow manual triggering for testing
   workflow_dispatch:
+    inputs:
+      sheet_name:
+        description: 'Google Sheet Tab Name'
+        required: false
+        default: 'Last Entry'
+      start_cell:
+        description: 'Start Cell (e.g., A2)'
+        required: false
+        default: 'B12'
+      end_cell:
+        description: 'End Cell Column (e.g., E)'
+        required: false
+        default: 'D'
 
 jobs:
   inventory-update:
@@ -29,7 +42,10 @@ jobs:
         env:
           CHANNEL_ACCESS_TOKEN: ${{ secrets.CHANNEL_ACCESS_TOKEN }}
           CHANNEL_SECRET: ${{ secrets.CHANNEL_SECRET }}
-          SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
+          SPREADSHEET_ID: "1e0D6-6CcSrrVr4SnV4-DaOw0gtODJaSYLmvU8j83N1o"
           LINE_GROUP_IDS: ${{ secrets.LINE_GROUP_IDS }}
           GOOGLE_APPLICATION_CREDENTIALS_JSON: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS_JSON }}
+          SHEET_NAME: "Last Entry"
+          START_CELL: "B12"
+          END_CELL: "D"
         run: python src/inventory/update.py 
